test_regress/t/t_class_static_member_bad.out
%Error: t/t_class_static_member_bad.v:10:11: Cannot access non-static member variable 'mb' from a static method 'foo' without object (IEEE 1800-2023 8.10)
   10 |     void'(mb.try_put(this));
      |           ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_static_member_bad.v:10:22: Cannot use 'this' in a static method 'foo' (IEEE 1800-2023 8.10-8.11)
   10 |     void'(mb.try_put(this));
      |                      ^~~~
%Error: Exiting due to
